# json-logic-py

./: .pypirc  README.md  pyproject.toml  requirements.txt  setup.cfg
json_logic/: __init__.py
json_logic/meta/: __init__.py  base.py  expressions.py
json_logic_transform/: __init__.py
tests/: test_add_operator.py  test_jsonlogic.py  test_shared.py
tests/introspection/: test_expression_processing.py  test_representation.py
